# Proj.MT

./: .gitignore  Cargo.toml  README.md  electron.js  index.html  main.js  package.json  pnpm  pnpm-lock.yaml  pnpm.CMD  pnpx  pnpx.CMD  tsconfig.json  vite.config.ts
serve/: shell.js  start.js
server/: event.js  index.js  preload.js  scripts.js  size.js  start.js  terminalEvent.js
server/controller/: project.js
server/event/: event.js  terminalEvent.js
server/services/: projectService.js
server/shell/: package.js
server/utils/: index.js
src/: App.css  App.tsx  index.css  main.tsx  typing.d.ts
src/components/BaseListItem/: index.tsx
src/components/ProjectItem/: index.tsx
src/components/TabPanel/: index.tsx
src/components/TerminalItem/: index.tsx
src/hooks/: index.ts
src/interfaces/: index.ts
src/store/: index.ts  projectSlice.ts
src/views/CommandListView/: index.tsx
src/views/Header/: index.tsx
src/views/MainView/: index.tsx
src/views/PackageListView/: index.tsx
src/views/ProjectMainView/: index.tsx
src/views/ProjectTabs/: CustomTabs.tsx  index.tsx
src/views/SiderMenu/: index.tsx
src/views/TerminalView/: index.tsx
web/: package.json
web/src/: App.js  index.css  index.tsx
